hphp/hack/test/typecheck/higher_kinded_types/generics_arguments_compared.php.exp
File "generics_arguments_compared.php", line 5, characters 10-11:
Invalid return type (Typing[4110])
File "generics_arguments_compared.php", line 4, characters 37-42:
Expected `string`
File "generics_arguments_compared.php", line 4, characters 37-42:
Considering that this type argument is invariant with respect to T
File "generics_arguments_compared.php", line 4, characters 24-26:
But got `int`
